# gitme

./: Cargo.toml  README.md
graphql/: repositories.graphql
src/: cli.rs  config.rs  github.rs  lib.rs  tui.rs  types.rs
src/tui/: pr.rs  utils.rs
src/tui/pr/: pr_details_state.rs  pr_list_state.rs
