[package]
name = "gitme"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6"
octocrab = "0.44"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
color-eyre = "0.6"
ratatui = { version = "0.29", features = [] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio-stream = "0.1"
open = "5"
graphql_client = { version = "0.14", features = ["reqwest"] }
textwrap = "0.16.2"
inquire = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tui-input = "0.12.1"
arc-swap = "1.7.1"
once_cell = "1.21.3"
